<resources>
    <string name="app_name">小递递</string>
    <string name="text">This is Menu</string>
    <string name="text2">我的钱包</string>
    <string name="text3">我的订单</string>
    <string name="text4">分享</string>
    <string name="text5">关于</string>
    <string name="text6">当你想购买城市另⼀个地⽅的物品，但⾃⼰却不想出门，不想⾯对交通的拥堵和世界的喧嚣，
        可以登录我们的app平台，寻找那些⽬标地附近的⼈让这些热⼼的朋友帮我们完成采购的任务并顺⼿快递给我们。</string>
    <string name="text7">开发团队&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                                       &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                                    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                                  &#160;&#160;&#160;黄屁股小组</string>
    <string name="text8">网址&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                                     &#160;https://www.stu.edu.cn/</string>
    <string name="text9">联系QQ&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                                      &#160;4516502</string>
    <string name="text10">版权所有@2017XDD\n别无所求，唯有最好</string>
    <string name="text11">切睾少年\15ybli@stu.edu.cn</string>
    <string name="text12">账户余额（元）</string>
    <string name="text13">8</string>
    <string name="text14">充值</string>
    <string name="text15">寻求帮助</string>
    <string name="text16">帮助他人</string>
    <string name="text17">我的好友</string>
</resources>
