<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view"
        android:layout_width="123dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:padding="20dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="334dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:drawablePadding="40dp"
        android:includeFontPadding="true"
        android:text="@string/text6"
        android:textColor="#666" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#CCC" />

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text7"
        android:textColor="#333"
        android:textSize="18sp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCC"/>

    <TextView
        android:id="@+id/text_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text8"
        android:textColor="#333"
        android:textSize="18sp" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#CCC" />


    <TextView
        android:id="@+id/text_view4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text9"
        android:textColor="#333"
        android:textSize="18sp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCC" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:text="@string/text10"
        android:layout_gravity="center|bottom"
        android:textSize="10sp"
        android:padding="90dp"/>



</LinearLayout>